# multiwfn-mac-build

./: 0123dim.f90  AdNDP.f90  Bspline.f90  CDA.f90  CDFT.f90  CMakeLists.txt  COMPILATION_METHOD.txt  DFTxclib.F  DOS.f90  EDA.f90  ETS_NOCV.f90  GUI.f90  LICENSE.txt  LSB.f90  Lebedev-Laikov.F  Makefile  Multiwfn.f90  NAONBO.f90  O1.f90  PBC.f90  README.md  atmraddens.f90  basin.f90  bondorder.f90  cp2kmate.f90  define.f90  deloc_aromat.f90  dislin_d.f90  edflib.f90  excittrans.f90  fileIO.f90  fparser.f90  function.f90  fuzzy.f90  grid.f90  hyper_polar.f90  integral.f90  minpack.f90  mouse_rotate.f90  orbcomp.f90  (+16 more)
.github/workflows/: build.yml  deploy.yml
ext/: 2F2.c  2F2.f90  2F2.h  frj.f90  no2F2.c  no2F2.f90  xlib.f90  xpm.f90
libreta_hybrid/: blockhrr_012345.f90  boysfunc.f90  boysfunc_data1.h  boysfunc_data2.h  ean.f90  ean_data1.h  ean_data2.h  eanvrr_012345.f90  hrr_012345.f90  libreta.f90  naiveeri.f90  ryspoly.f90
noGUI/: dislin_d_empty.f90  mouse_rotate_empty.f90
